# mtuci-pis

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
lab1/: groupmates.py
lab1/admin_learning/: manage.py  mypy.ini
lab1/admin_learning/admin_learning/: asgi.py  settings.py  urls.py  wsgi.py
lab2/: mypy.ini
lab2/helloworld/: manage.py
lab2/helloworld/flatpages/: apps.py  views.py
lab2/helloworld/flatpages/static/: index.css
lab2/helloworld/flatpages/templates/: index.html  static_handler.html
lab2/helloworld/helloworld/: asgi.py  settings.py  urls.py  wsgi.py
lab3/: mypy.ini
lab3/blog/articles/: models.py
lab3/blog/articles/templates/: archive.html
lab3/blog/blog/: settings.py  urls.py
lab4/blog/articles/: views.py
lab4/blog/articles/static/css/: article.css
lab4/blog/articles/templates/: archive.html  article.html
lab4/blog/blog/: urls.py
lab5/blog/articles/: views.py
lab5/blog/articles/migrations/: 0001_initial.py
lab5/blog/articles/static/css/: article.css
lab5/blog/articles/templates/: create_post.html
lab5/blog/blog/: urls.py
lab6/blog/articles/: admin.py
lab6/blog/articles/static/css/: article.css
lab6/blog/articles/templates/: archive.html  article.html  login.html
lab6/blog/blog/: asgi.py  wsgi.py
lab7/blog/: manage.py
lab7/blog/articles/: views.py
lab7/blog/articles/static/css/: article.css
lab7/blog/articles/templates/: archive.html  create_post.html  register.html
lab7/blog/blog/: settings.py  urls.py
lab8/blog/articles/static/css/: article.css
lab8/blog/articles/static/js/: helloworld.js  highlight-post.js
lab8/blog/articles/templates/: archive.html  article.html  create_post.html  login.html  register.html
lab9/blog/articles/static/css/: article.css
lab9/blog/articles/static/js/: fold-post.js  logo-hover.js  parallax.js
lab9/blog/articles/templates/: archive.html  article.html  base.html  create_post.html  header.html  login.html  register.html
